<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.imprex</groupId>
  <artifactId>orebfuscator</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <name>Orebfuscator</name>
  <url>https://github.com/Imprex-Development/Orebfuscator</url>
  <description>High-Performance Anti X-Ray</description>
  <inceptionYear>2020</inceptionYear>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/Imprex-Development/Orebfuscator/issues</url>
  </issueManagement>

  <properties>
    <revision>5.0.0-b0</revision>

    <dependency.bukkit.version>1.16.1-R0.1-SNAPSHOT</dependency.bukkit.version>
    <dependency.folia.version>1.20.1-R0.1-SNAPSHOT</dependency.folia.version>
    <dependency.paper.version>1.20.1-R0.1-SNAPSHOT</dependency.paper.version>
    <dependency.bstats.version>3.1.0</dependency.bstats.version>

    <!-- new core -->
    <dependency.netty.version>4.1.90.Final</dependency.netty.version>
    <dependency.guava.version>33.4.8-jre</dependency.guava.version>
    <dependency.gson.version>2.13.1</dependency.gson.version>
    <dependency.snakeyaml.version>2.4</dependency.snakeyaml.version>
    <dependency.joml.version>1.10.8</dependency.joml.version>
    <dependency.lz4.version>1.8.0</dependency.lz4.version>

    <!-- common -->
    <dependency.junit.version>5.13.4</dependency.junit.version>
    <dependency.mockito.version>5.19.0</dependency.mockito.version>
    <dependency.jetannotations.version>26.0.2</dependency.jetannotations.version>

    <plugin.compile.version>3.14.0</plugin.compile.version>
    <plugin.shade.version>3.6.0</plugin.shade.version>
    <plugin.jar.version>3.4.2</plugin.jar.version>
    <plugin.sunfire.version>3.5.3</plugin.sunfire.version>
    <plugin.flatten.version>1.7.2</plugin.flatten.version>
    <plugin.specialsource.version>2.0.4</plugin.specialsource.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
  </repositories>

  <modules>
    <module>orebfuscator-api</module>
    <module>orebfuscator-core</module>
    <module>orebfuscator-compatibility</module>
    <module>orebfuscator-nms</module>
    <module>orebfuscator-plugin</module>
  </modules>

  <profiles>
    <profile>
      <id>codemc</id>

      <repositories>
        <repository>
          <id>nms-repo</id>
          <url>https://repo.codemc.io/repository/nms/</url>
        </repository>
      </repositories>

      <distributionManagement>
        <repository>
          <id>codemc-releases</id>
          <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
          <id>codemc-snapshots</id>
          <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </snapshotRepository>
      </distributionManagement>
    </profile>
  </profiles>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>${plugin.shade.version}</version>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>shade</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <filters>
              <filter>
                <artifact>*:*</artifact>
                <excludes>
                  <!-- signatures -->
                  <exclude>META-INF/*.SF</exclude>
                  <exclude>META-INF/*.DSA</exclude>
                  <exclude>META-INF/*.RSA</exclude>

                  <!-- duplicate/irrelevant in uber-jar -->
                  <exclude>META-INF/MANIFEST.MF</exclude>
                  <exclude>META-INF/LICENSE*</exclude>
                  <exclude>META-INF/NOTICE*</exclude>
                  <exclude>META-INF/maven/**</exclude>

                  <!-- kill JPMS descriptors to avoid "Shading
                  will break strong encapsulation" -->
                  <exclude>module-info.class</exclude>
                  <exclude>META-INF/versions/**/module-info.class</exclude>
                </excludes>
              </filter>
            </filters>
            <transformers>
              <transformer
                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"/>
              <transformer
                implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
            </transformers>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${plugin.jar.version}</version>
          <configuration>
            <archive>
              <manifestEntries>
                <paperweight-mappings-namespace>mojang</paperweight-mappings-namespace>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${plugin.sunfire.version}</version>
        <configuration>
          <junitArtifactName>org.junit.jupiter:junit-jupiter</junitArtifactName>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${plugin.compile.version}</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>${plugin.flatten.version}</version>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>package</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>clean</flattenMode>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <!-- test -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${dependency.junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${dependency.mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- code analysis -->
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>${dependency.jetannotations.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>
